--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,10 +1,19 @@
 body {
 	display: flex;
 	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	padding-top: 50px;
 	background-color: aqua;
+
 
 	h1 {
 		text-transform: uppercase;
 		font-size: 45px;
+	}
+
+	.img {
+		width: 250px;
+		height: 250px;
 	}
 }
